hide scrollbar + fix some styles regarding auth pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,20 +26,25 @@ $mobile: 600px;
   margin: 0;
   padding: 0;
   font-family: "Poppins", "sans-serif";
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .app {
   height: 100vh;
 
   .app-container {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
+    height: 100vh;
     // LOGIN & REGISTER
     .auth {
+      align-self: stretch;
       display: flex;
       flex: 1;
       flex-direction: column;
@@ -47,7 +52,7 @@ $mobile: 600px;
       justify-content: center;
       height: 100vh;
       background-color: $lightGreen;
-      padding: 0 30px;
+      padding: 30px;
       h1 {
         font-style: 20px;
         color: teal;
@@ -105,6 +110,7 @@ $mobile: 600px;
         @include for-layout-only {
           padding: 0 16px;
         }
+
         .container {
           display: flex;
           justify-content: space-between;
